--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -1,3 +1,4 @@
+/
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -18,7 +19,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
-	border: 0;
+	border:3px solid grey;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
@@ -64,3 +65,38 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+nav {
+  letter-spacing:7px;
+   
+}
+nav .logo{
+  display:inline-block;
+  width:1%;
+  
+  
+}
+#top{
+  width: 100%;
+}
+.about{
+  width:40%;
+  display:inline-block;
+}
+.features{
+  width: 40%;
+  margin:0;
+  display:inline-block;
+}
+#bottom {
+  
+}
+#bottom .vision {
+
+
+}
+#bottom .product {
+  
+}
+#bottom .service {
+<!doctype html>
+
