--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -1,4 +1,4 @@
-/
+/*hello*/
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -99,4 +99,5 @@ nav .logo{
 }
 #bottom .service {
 <!doctype html>
+
 
