--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -75,17 +75,20 @@ nav .logo{
   
   
 }
-#IOD {
+
+  
+}
+
+button #on {
   font-size: 30px;
   width: 100%;
+  margin: 30%;
+  
+ 
 }
-#IOD h1{
+button .IOD {
   display: inline-block;
   margin: 20%;
-}
-#IOD .img2 {
-  display: inline-block;
-  margin: 0%;
 }
 
 #top{
@@ -119,6 +122,12 @@ nav .logo{
   width: 20%;
   display:inline-block;
   
+}
+footer {
+  text-align: center;
+}
+#about {
+  margin-right: 70%;
 }
 <!doctype html>
 
